--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="main.css" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
