--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="main.css" charset="utf-8"></script>
+    <link rel="stylesheet" href="main.css">
     <title></title>
   </head>
-  <body>
+
+  <body >
 
   </body>
+
 </html>
